filling in character controller
